--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <h1>Overlapping rectangles outline</h1>
     <div>
       <button id="sample">Wanted Result</button>
-      <button id="chatgpt">ChatGPT</button>
-      <button id="gemini">Gemini</button>
-      <button id="claude">Claude</button>
+      <button id="chatgpt">GPT 5.1</button>
+      <button id="gemini">Gemini 3</button>
+      <button id="claude">Sonnet 4.5</button>
       <button id="mistral">Mistral</button>
-      <button id="perplexity">Perplexity</button>
+      <button id="deepseek">Deepseek</button>
     </div>
     <p>First try</p>
     <div id="first"></div>
